force-app/main/default/objects/QTB_Exception_Logger__e/QTB_Exception_Logger__e.object-meta.xml
<CustomObject>
    <description>Platform Event to capture errors</description>
    <label>Exception Logger</label>
    <pluralLabel>Exception Logger</pluralLabel>
</CustomObject>