force-app/main/default/objects/QTB_Exception_Logger__e/fields/QTB_Body__c.field-meta.xml
<CustomField>
    <fullName>QTB_Body__c</fullName>
    <description>#SFCPQBLG - Body contains the message about the Log or Exception</description>
    <label>Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>