force-app/main/default/objects/QTB_Exception_Logger__e/fields/QTB_Origin__c.field-meta.xml
<CustomField>
    <fullName>QTB_Origin__c</fullName>
    <description>#SFCPQBLG - Origin of the Log or Exception</description>
    <label>Origin</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>