force-app/main/default/objects/QTB_Exception_Logger__e/fields/QTB_Type__c.field-meta.xml
<CustomField>
    <fullName>QTB_Type__c</fullName>
    <description>#SFCPQBLG - Type of the Log or Exception</description>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>